@@ -1,3 +1,7 @@
+2012-12-18  Stefan Sprenger  <stefan.sprenger@dkd.de>
+
+	* Added call of urldecode() on filenames to decode umlauts
+
 2012-12-02  Ingo Renner  <ingo.renner@dkd.de>
 
 	* Fix missing endtime field for file documents
